# LAB_OOP

./: Basket.cpp  Basket.h  CMakeLists.txt  Client.cpp  Client.h  Furniture.cpp  Furniture.h  Operator.cpp  Operator.h  Order.cpp  Order.h  People.cpp  People.h  Table.cpp  Table.h  main.cpp
